--- a/index.html
+++ b/index.html
@@ -13,5 +13,37 @@
     <link rel="stylesheet" href="css/bootstrap-grid.min.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <!-- header -->
+    <header class="header">
+      <div class="continer-fluid header__container d-flex">
+        <div class="header__left">
+          <img src="img/revo_logo.svg" alt="" class="header__logo" />
+          <h1 class="header__title">
+            YOUR <br />
+            <span>PERSONALIZED</span> <br />
+            COFFEE
+          </h1>
+        </div>
+        <div class="header__center">
+          <div class="header__circle"></div>
+        </div>
+        <div class="header__right">
+          <a href="#" class="header__cart">
+            <img src="img/cart-icon.svg" alt="" />
+          </a>
+          <nav class="nav">
+            <h2 class="nav__title">TRANG CHỦ</h2>
+            <ul class="nav__list">
+              <li class="nav__link"><a href="#">COFFEE</a></li>
+              <li class="nav__link"><a href="#">PHIN MẠ MÀU</a></li>
+              <li class="nav__link"><a href="#">COMBO PHIN PHÊ</a></li>
+              <li class="nav__link"><a href="#">GIFTSET</a></li>
+              <li class="nav__link"><a href="#">LIÊN HỆ</a></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </header>
+  </body>
 </html>
