--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Freebie Coffee</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;800&family=Nunito:ital,wght@0,600;0,700;1,300;1,400&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;800&family=Nunito:ital,wght@0,300;0,400;0,600;0,700;1,300;1,600&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/normalize.css" />
@@ -45,5 +45,50 @@
         </div>
       </div>
     </header>
+    <!-- intro -->
+    <section class="features">
+      <div class="container">
+        <p class="suptitle">Your Personalized Coffee</p>
+        <h2 class="section__title">COFFEE BUILD YOUR BASE</h2>
+        <div class="row">
+          <div class="col-lg-3 col-sm-6 features__item">
+            <div class="features__img">
+              <img src="img/base/ic.svg" alt="" />
+            </div>
+            <h3 class="features__h3">Nguồn gốc</h3>
+            <p class="features__text">
+              Những hạt cà phê Arabica, Robusta đạt chất lượng theo tiêu chuẩn quốc tế.
+            </p>
+          </div>
+          <div class="col-lg-3 col-sm-6 features__item">
+            <div class="features__img">
+              <img src="img/base/ic-1.svg" alt="" />
+            </div>
+            <h3 class="features__h3">Chất lượng</h3>
+            <p class="features__text">
+              Từng một hạt cà phê là cả một quá trình tập trung cao độ của nghệ nhân cà phê.
+            </p>
+          </div>
+          <div class="col-lg-3 col-sm-6 features__item">
+            <div class="features__img">
+              <img src="img/base/ic-2.svg" alt="" />
+            </div>
+            <h3 class="features__h3">Các loại hạt</h3>
+            <p class="features__text">
+              70% chất lượng tách cà phê đến từ nguồn gốc và chất lượng green bean.
+            </p>
+          </div>
+          <div class="col-lg-3 col-sm-6 features__item">
+            <div class="features__img">
+              <img src="img/base/ic-3.svg" alt="" />
+            </div>
+            <h3 class="features__h3">Pha chế</h3>
+            <p class="features__text">
+              Những hạt cà phê được lột xác qua quá trình rang xay kỹ lưỡng và nghiêm ngặt.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
