--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <section class="features">
       <div class="container">
         <p class="suptitle">Your Personalized Coffee</p>
-        <h2 class="section__title">COFFEE BUILD YOUR BASE</h2>
+        <h2 class="section__title features__title">COFFEE BUILD YOUR BASE</h2>
         <div class="row">
           <div class="col-lg-3 col-sm-6 features__item">
             <div class="features__img">
@@ -86,6 +86,90 @@
             <p class="features__text">
               Những hạt cà phê được lột xác qua quá trình rang xay kỹ lưỡng và nghiêm ngặt.
             </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- coffee -->
+    <section class="coffee">
+      <div class="coffee__bg"></div>
+      <div class="container">
+        <p class="suptitle">Choose Your Favorite</p>
+        <h2 class="section__title coffee__title">CHUẨN GU ĐÚNG VỊ</h2>
+        <div class="coffee__slider">
+          <div class="coffee__slides">
+            <!-- coffee row -->
+            <div class="coffee__row">
+              <div class="coffee__slide d-flex">
+                <div class="coffee__img">
+                  <img src="img/coffee/IMAGE.webp" alt="" />
+                </div>
+                <div class="coffee__content">
+                  <span class="coffee__price">99.000</span>
+                  <h3 class="coffee__name">REVO Morning</h3>
+                  <p class="coffee__text">đắng, hậu ngọt, hương hoa</p>
+                  <button class="coffee__btn">MUA NGAY</button>
+                </div>
+              </div>
+              <div class="coffee__slide d-flex">
+                <div class="coffee__img">
+                  <img src="img/coffee/IMAGE-1.webp" alt="" />
+                </div>
+                <div class="coffee__content">
+                  <span class="coffee__price">85.000</span>
+                  <h3 class="coffee__name">REVO Everyday</h3>
+                  <p class="coffee__text">cân bằng, hậu đắng, vị chocolate</p>
+                  <button class="coffee__btn">MUA NGAY</button>
+                </div>
+              </div>
+              <div class="coffee__slide d-flex">
+                <div class="coffee__img">
+                  <img src="img/coffee/IMAGE-4.webp" alt="" />
+                </div>
+                <div class="coffee__content">
+                  <span class="coffee__price">195.000</span>
+                  <h3 class="coffee__name">REVO Honey</h3>
+                  <p class="coffee__text">độ ngọt cao, hậu ngọt, chua họ táo</p>
+                  <button class="coffee__btn">MUA NGAY</button>
+                </div>
+              </div>
+            </div>
+            <!-- coffee row -->
+            <div class="coffee__row">
+              <div class="coffee__slide d-flex">
+                <div class="coffee__img">
+                  <img src="img/coffee/IMAGE-2.webp" alt="" />
+                </div>
+                <div class="coffee__content">
+                  <span class="coffee__price">139.000</span>
+                  <h3 class="coffee__name">REVO Origin</h3>
+                  <p class="coffee__text">hậu ngọt, ít đắng, vị chua dâu</p>
+                  <button class="coffee__btn">MUA NGAY</button>
+                </div>
+              </div>
+              <div class="coffee__slide d-flex">
+                <div class="coffee__img">
+                  <img src="img/coffee/IMAGE-3.webp" alt="" />
+                </div>
+                <div class="coffee__content">
+                  <span class="coffee__price">75.000</span>
+                  <h3 class="coffee__name">REVO Đậm Đà</h3>
+                  <p class="coffee__text">đậm đà, đắng, truyền thống</p>
+                  <button class="coffee__btn">MUA NGAY</button>
+                </div>
+              </div>
+              <div class="coffee__slide d-flex">
+                <div class="coffee__img">
+                  <img src="img/coffee/IMAGE-5.webp" alt="" />
+                </div>
+                <div class="coffee__content">
+                  <span class="coffee__price">169.000</span>
+                  <h3 class="coffee__name">REVO Natural</h3>
+                  <p class="coffee__text">hậu ngọt, hương hoa, vị chua dâu</p>
+                  <button class="coffee__btn">MUA NGAY</button>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
