--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header class="header">
       <div class="continer-fluid header__container d-flex">
         <div class="header__left">
-          <img src="img/revo_logo.svg" alt="" class="header__logo" />
+          <img src="img/revo_logo.png" alt="" class="header__logo" />
           <h1 class="header__title">
             YOUR <br />
             <span>PERSONALIZED</span> <br />
@@ -174,5 +174,14 @@
         </div>
       </div>
     </section>
+    <!-- giftset -->
+    <section class="giftset">
+      <div class="container">
+        <p class="suptitle">Best Gift For Best Friend</p>
+        <h2 class="section__title giftset__title">GIFTSET</h2>
+      </div>
+    </section>
   </body>
 </html>
+
+<!-- total time: 1h 15m -->
