--- a/index.html
+++ b/index.html
@@ -176,12 +176,56 @@
     </section>
     <!-- giftset -->
     <section class="giftset">
+      <div class="giftset__bg"></div>
       <div class="container">
         <p class="suptitle">Best Gift For Best Friend</p>
         <h2 class="section__title giftset__title">GIFTSET</h2>
+        <div class="row justify-content-end">
+          <div class="col-md-9 giftset__slider d-flex">
+            <div class="giftset__content">
+              <!-- item 1 -->
+              <div class="giftset__item">
+                <img src="img\giftset\coffee.png" alt="" class="giftset__img" />
+                <span class="giftset__price">285.000</span>
+                <h3 class="giftset__h3">Giftset "Cà phê phin Việt Nam"</h3>
+                <p class="giftset__text">
+                  Món quà tuyệt vời dành cho người sành cà phê. Hạt cà phê được Revo cẩn trọng chọn
+                  lựa, rang xay theo công nghệ và bí quyết học hỏi từ những nghệ nhân nổi tiếng,
+                  cùng với tình yêu, sự đam mê của người làm cà phê… tạo ra những tách cà phê tinh
+                  khiết chỉ dành riêng cho bạn.
+                </p>
+                <!-- giftset__about -->
+                <div class="giftset__about d-flex justify-content-between">
+                  <div class="giftset__about-item d-flex align-items-center">
+                    <img src="img/giftset/coffee-beans.svg" alt="" class="giftset__about-img" />
+                    <div class="giftset__about-text">
+                      <p>Loại hạt</p>
+                      <h4>Fine Robusta Blend</h4>
+                    </div>
+                  </div>
+                  <div class="about__item d-flex align-items-center">
+                    <img src="img/giftset/mountain.svg" alt="" class="giftset__about-img" />
+                    <div class="giftset__about_text">
+                      <p>Loại hạt</p>
+                      <h4>Fine Robusta Blend</h4>
+                    </div>
+                  </div>
+                </div>
+                <a href="#" class="giftset__btn">MUA NGAY</a>
+              </div>
+              <!-- item 2 -->
+              <!-- item 3 -->
+            </div>
+            <div class="giftset__buttons">
+              <button class="giftset__slider-btn active">1</button>
+              <button class="giftset__slider-btn">2</button>
+              <button class="giftset__slider-btn">3</button>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
   </body>
 </html>
 
-<!-- total time: 1h 15m -->
+<!-- total time: 2h 05m -->
