finished desktop version
static

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     </section>
     <!-- coffee -->
     <section class="coffee">
-      <div class="coffee__bg"></div>
+      <div class="coffee__bg bg-block"></div>
       <div class="container">
         <p class="suptitle">Choose Your Favorite</p>
         <h2 class="section__title coffee__title">CHUẨN GU ĐÚNG VỊ</h2>
@@ -176,7 +176,7 @@
     </section>
     <!-- giftset -->
     <section class="giftset">
-      <div class="giftset__bg"></div>
+      <div class="giftset__bg bg-block"></div>
       <div class="container">
         <p class="suptitle">Best Gift For Best Friend</p>
         <h2 class="section__title giftset__title">GIFTSET</h2>
@@ -225,7 +225,93 @@
         </div>
       </div>
     </section>
+    <!-- combo -->
+    <section class="combo">
+      <div class="combo__bg bg-block"></div>
+      <div class="container">
+        <p class="suptitle">Your Personalized Coffee</p>
+        <h2 class="section__title combo__title">COMBO PHIN PHÊ</h2>
+        <div class="combo__slider">
+          <div class="combo__slides">
+            <!-- combo__slide -->
+            <div class="combo__slide">
+              <div class="combo__img">
+                <img src="img/combo/IMAGE.webp" alt="" />
+              </div>
+              <div class="combo__inner">
+                <div class="combo__prices d-flex align-items-center">
+                  <span class="combo__price">147.000</span>
+                  <span class="combo__discount">155.000</span>
+                </div>
+                <h3 class="combo__h3">Combo Revo Đậm Đà</h3>
+                <p class="combo__text">
+                  Hàm lượng caffein trong Revo Đậm Đà đủ mạnh để làm bạn tỉnh táo làm việc...
+                </p>
+                <a href="#" class="combo__btn">MUA NGAY</a>
+              </div>
+            </div>
+            <!-- combo__slide -->
+            <div class="combo__slide">
+              <div class="combo__img">
+                <img src="img/combo/IMAGE-1.webp" alt="" />
+              </div>
+              <div class="combo__inner">
+                <div class="combo__prices d-flex align-items-center">
+                  <span class="combo__price">156.000</span>
+                  <span class="combo__discount">165.000</span>
+                </div>
+                <h3 class="combo__h3">Combo Revo Everyday</h3>
+                <p class="combo__text">
+                  Revo Everyday được phối trộn giữa vị đắng của hạt Robusta và hương thơm...
+                </p>
+                <a href="#" class="combo__btn">MUA NGAY</a>
+              </div>
+            </div>
+            <!-- combo__slide -->
+            <div class="combo__slide">
+              <div class="combo__img">
+                <img src="img/combo/IMAGE-2.webp" alt="" />
+              </div>
+              <div class="combo__inner">
+                <div class="combo__prices d-flex align-items-center">
+                  <span class="combo__price">275.000</span>
+                  <span class="combo__discount">290.000</span>
+                </div>
+                <h3 class="combo__h3">Combo Revo Honey</h3>
+                <p class="combo__text">
+                  Honey – trong tên gọi Revo Honey đến từ phương pháp chế biến hạt Arabica...
+                </p>
+                <a href="#" class="combo__btn">MUA NGAY</a>
+              </div>
+            </div>
+            <!-- combo__slide -->
+            <div class="combo__slide">
+              <div class="combo__img">
+                <img src="img/combo/IMAGE-3.webp" alt="" />
+              </div>
+              <div class="combo__inner">
+                <div class="combo__prices d-flex align-items-center">
+                  <span class="combo__price">155.000</span>
+                  <span class="combo__discount">169.000</span>
+                </div>
+                <h3 class="combo__h3">Combo Revo Honey</h3>
+                <p class="combo__text">
+                  Revo Natural là dòng cà phê đặc biệt của Revo Coffee dành riêng ...
+                </p>
+                <a href="#" class="combo__btn">MUA NGAY</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- footer -->
+    <footer class="footer">
+      <p class="footer__copyright">&copy; Revo Coffee Việt Nam - 2018</p>
+    </footer>
   </body>
 </html>
 
-<!-- total time: 2h 05m -->
+<!-- total time: 2h 35m -->
+<!-- start at 17.25 -->
+<!-- l 27 r 23 -->
