--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/bootstrap-grid.min.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/media.css" />
     <script src="js/main.js" defer></script>
   </head>
   <body>
@@ -193,7 +194,7 @@
       <div class="container">
         <p class="suptitle">Best Gift For Best Friend</p>
         <h2 class="section__title giftset__title">GIFTSET</h2>
-        <div class="row justify-content-end">
+        <div class="row giftset-row justify-content-end">
           <div class="col-md-9 giftset__slider d-flex">
             <div class="giftset__content">
               <!-- item 1 -->
@@ -285,7 +286,6 @@
                 </div>
                 <a href="#" class="giftset__btn">MUA NGAY</a>
               </div>
-              <!-- GiFtSeT items end -->
             </div>
             <div class="giftset__buttons">
               <button class="giftset__slider-btn active">1</button>
@@ -340,7 +340,6 @@
                 <a href="#" class="combo__btn">MUA NGAY</a>
               </div>
             </div>
-            <!-- combo__slide -->
             <div class="combo__slide">
               <div class="combo__img">
                 <img src="img/combo/IMAGE-2.webp" alt="" />
@@ -384,5 +383,3 @@
     </footer>
   </body>
 </html>
-
-<!-- total time: 4h 15m -->
